@@ -14,10 +14,13 @@ INCLUDES = -I$(top_srcdir)/inc
 LDADD = ../common/libucommon.la @UCOMMON_LIBS@ @UCOMMON_CLINK@
 EXTRA_DIST = *.1
 
-man_MANS = args.1
-bin_PROGRAMS = args scrub
+man_MANS = args.1 scrub.1
+bin_PROGRAMS = args scrub mdsum
 
 args_SOURCES = args.cpp
 
 scrub_SOURCES = scrub.cpp
 scrub_LDFLAGS = @SECURE_LOCAL@
+
+mdsum_SOURCES = mdsum.cpp
+mdsum_LDFLAGS = @SECURE_LOCAL@
