@@ -1,0 +1,76 @@
+.\" scrub - securely erase files by filling with random data first.
+.\" Copyright (c) 2010 David Sugar <dyfet@gnutelephony.org>
+.\"
+.\" This manual page is free software; you can redistribute it and/or modify
+.\" it under the terms of the GNU General Public License as published by
+.\" the Free Software Foundation; either version 3 of the License, or
+.\" (at your option) any later version.
+.\"
+.\" This program is distributed in the hope that it will be useful,
+.\" but WITHOUT ANY WARRANTY; without even the implied warranty of
+.\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+.\" GNU General Public License for more details.
+.\"
+.\" You should have received a copy of the GNU General Public License
+.\" along with this program; if not, write to the Free Software
+.\" Foundation, Inc.,59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+.\"
+.\" This manual page is written especially for Debian GNU/Linux.
+.\"
+.TH scrub "1" "January 2010" "GNU uCommon" "GNU Telephony"
+.SH NAME
+scrub \- securely erase files by filling with random data first.
+.SH SYNOPSIS
+.B scrub \fI[options]\fR \fIpaths...\fR 
+.br
+.SH DESCRIPTION
+This command is used to securely erase files.  This is accomplished by
+filling the file with random data in pre-sized chunks.  Multiple passes
+of random data may also be used.  The pre-sized chunks are used to remove
+information about exact original file size.  Other options include random
+renaming of the original file before deletion and the use of truncation to
+break down meta-data on what blocks in the file system were originally 
+associated with a securely deleted file.  This is specifically intended to 
+make it harder to perform forensic analysis on securely erased files.
+.SH OPTIONS
+.TP
+\fB--blocksize\fR \fIsize\fR
+Set the default block size (in 1 k increments) for scrub to use when
+writing random data.  This effects both the final file length, which will
+be aligned to the specified size, and the way the truncate option decomposes
+files.  The default is 1k.
+.TP
+\fB--follow\fR
+Dereference and follow symlinks, erasing the target file.
+.TP
+\fB--passes\fR \fIcount\fR
+The number of passes used when writing random data.  The default is 1 pass.
+.TP
+\fB--recursive\fR
+If argument is a directory, recursively scan directory and any subdirectory
+contents as arguments.
+.TP
+\fB--rename\fR
+Rename the file randomly before deletion to clear persistant inode data.
+.TP
+\fB--truncate\fR
+Decompose the file through truncation to break down file system page maps.
+.TP
+\fB--verbose\fR
+Display each file being processed to the console.
+.TP
+\fB--help\fR
+Outputs help screen for the user.
+.SH AUTHOR
+.B scrub
+was written by David Sugar <dyfet@gnutelephony.org>.
+.SH "REPORTING BUGS"
+Report bugs to bug-commoncpp@gnu.org.
+.SH COPYRIGHT
+Copyright \(co 2010 David Sugar, Tycho Softworks.
+.br
+This is free software; see the source for copying conditions.  There is NO
+warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR
+PURPOSE.
+
+
