@@ -1,5 +1,6 @@
 from ucommon 4.0.1 to 4.0.2
-- introduction of scrub utility.
+- introduction of scrub utility for secure file deletion.
+- introduction of mdsub utility for computing file hashes.
 - shell::printf always flushes output for console.
 
 from ucommon 4.0.0 to 4.0.1
